--- a/phase1/css/styles.css
+++ b/phase1/css/styles.css
@@ -70,7 +70,7 @@ body {
 .logo {
   display: flex;
   flex-direction: column;
-  align-items: flex-end; /* push logo right */
+  align-items: flex-end; 
   line-height: 1.2;
 }
 .nav-links {
